<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pantalla_ppal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr01_20171.proyectoescuela.Controlador.PantallaPpal"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_seguimiento_etico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:contextClickable="false"
                    android:onClick="ClckIrSeguimientoEtico"
                    android:text="@string/seguimiento_etico"
                    app:srcCompat="@mipmap/etica"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seguimiento_etico"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_seguimiento_cognitivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/btn_asistencia"
                    android:onClick="ClckIrSeguimientoCognitivo"
                    android:text="@string/seguimiento_cognitivo"
                    android:background="@color/transparente"
                    app:srcCompat="@mipmap/cognitivo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seguimiento_cognitivo"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedor_botones_principal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_metas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ClickIrMetas"
                    app:srcCompat="@mipmap/metas"
                    android:background="@color/transparente"
                    android:text="@string/metas" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metas"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_asistencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ClickIrAsistencia"
                    app:srcCompat="@mipmap/asistencia"
                    android:background="@color/transparente"
                    android:text="@string/asistencia" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asistencia"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/btn_ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ClickIrUbicacion"
                    android:text="@string/ubicacion"
                    android:background="@color/transparente"
                    app:srcCompat="@mipmap/ubicacion"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>



        </LinearLayout>





    </LinearLayout>

</LinearLayout>
